<resources>
    <string name="app_name">Note Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">Note Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="send_as_email">Send as email</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="communicate">Communicate</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_text_hint">Note Text</string>
    <string name="notes">Notes</string>
    <string name="courses">Courses</string>
    <string name="videos_icon">Videos Icon</string>
    <string name="note_icon">Note icon</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_general_category">General</string>
    <string name="pref_title_display_name">Your name</string>
    <string name="pref_default_display_name">Muhammad Lee</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="pref_default_email_address">yourname@yourhost.com</string>
    <string name="pref_title_favourite_social">Favourite social network</string>
    <string name="pref_default_favourite_social">https://plus.google.com</string>
</resources>
