<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_general_category">

        <EditTextPreference
            android:defaultValue="@string/pref_default_display_name"
            app:key="user_display_name"
            app:title="@string/pref_title_display_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_email_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="user_email_address"
            app:title="@string/pref_title_email_address"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>